# GeoJobSearch

./: .coverage  .gitignore  .gitlab-ci.yml  README.md  compose.deploy.yaml  compose.yml  package-lock.json
mysql/Test/: SQL Database Testing Script.txt
mysql/scripts/: setup.sql
python/: Dockerfile  ScrapingBot.py  create-cron.sh  filterJob.py  filterJobTest.py  jobListings.json  jsonToList.py  main-cron  main.py  pyproject.toml  readme  requirements.txt  run-scraper.sh  scraperToData.py  test_scraperToData.py  test_scrapingBot.py
react/: .eslintrc.yml  Dockerfile  devcontainer.json  package-lock.json  package.json
react/public/: index.html
react/src/: App.js  setupProxy.js
react/src/components/: DisplayJobs.jsx  Filtering.jsx  Map.jsx  NavigationBar.jsx  Search.jsx
spring/: Dockerfile  build.gradle  devcontainer.json  pom.xml
spring/src/: __init__.py
spring/src/main/java/spring/backend/: BackendApplication.java  HelloController.java  JobController.java
spring/src/main/java/spring/backend/models/: Job.java  (+2 more)
spring/src/main/python/: ScrapingBot.py  filterJob.py  scraperToData.py
spring/src/main/resources/: application.properties
spring/src/test/: __init__.py
spring/src/test/java/spring/backend/: TestDatabase.java  testDatabase.java  testDatabase.java.java
spring/src/test/python/: filterJobTest.py  test_scaperToData.py  test_scraperToData.py  test_scrapingBot.py
swag/config/: .donoteditthisfile.conf
swag/config/etc/letsencrypt/: cli.ini
swag/config/keys/: cert.crt  cert.key  letsencrypt
swag/config/nginx/site-confs/: default.conf
(+11 files in other folders)
