[tool.poetry]
name = "springtemplate-python"
version = "0.1.0"
description = ""
authors = ["Cooper MacGregor <cooper.macgregor14@gmail.com>"]
 
[tool.poetry.dependencies]
python = "^3.11"
 
[tool.poetry.dev-dependencies]
 
[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false

[tool.poetry.scripts]
test = "pytest"
lint = "flake8"
